tests/paczka1/small_fuzzy/88314001.err
Error in line 5: S996 A579 -4,0
Error in line 1: S996 A579 66,6
